--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,3 +85,12 @@
     @apply text-primary underline-offset-4 hover:underline;
   }
 }
+
+@layer utilities {
+  .btn-icon-l {
+    @apply mr-2 size-4;
+  }
+  .btn-icon-r {
+    @apply ml-2 size-4;
+  }
+}
